feat: create single movie getter
